<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/BackGround"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titNombre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/hint_nombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background_white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titApellido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/hint_Apellido">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background_white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titCorreoINstitucional"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/hint_CorreoInsti">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorreoInstitutcional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background_white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titContraseña"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/hint_Constrasena">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background_white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spnTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_background_white" />

    <Switch
        android:id="@+id/swtEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spnEstado" />

    <Button
        android:id="@+id/btnAgregarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_agregar_usuario" />

</LinearLayout>